<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Login">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="371dp"
            android:layout_height="354dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            android:maxHeight="200dp"
            android:scaleType="centerInside"
            android:src="@drawable/untitled_design__9_" />

        <TextView
            android:id="@+id/loginWord"
            android:text="@string/loginword"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/earthDayText"
            android:text="@string/earthadytext"
            android:textStyle="italic"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailorusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:hint="Email/Username"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLines="1"
                android:layout_marginTop="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="8dp"
                android:translationY="-4dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"/>
            <TextView
                android:id="@+id/registerNow"
                android:text="@string/click_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
